
using Decorator.Messages;

namespace Decorator.ExemplesClass
{

    /// <summary>
    /// Сервис для выпуска карт.
    /// </summary>
    public class MessageService
    {
        /// <summary>
        /// Выпускает карту с указанным сообщением.
        /// </summary>
        /// <param name="message">Сообщение, связанное с выпуском карты.</param>
        public void Issue(Message message)
        {
            message.Content = "Выпущена карта";
            Console.WriteLine(message.Content);
        }        
    }
}
