namespace Decorator.ExemplesEnum
{
    public enum NotificationType
    {
        Facebook,
        Sms,
        Email
    }
}