@startuml
' Декоратор - это структурный паттерн проектирования, который позволяет динамически добавлять объектам новую функциональность, оборачивая их в полезные «обёртки».
' В данном примере реализован паттерн Декоратор для отправки уведомлений различными способами (Email, SMS, Facebook).

' Интерфейс сервиса уведомлений
interface INotyficationService {
    +Notify()
}

' Базовый декоратор, реализующий интерфейс INotyficationService
class BaseDecorator {
    -notyficationService : INotyficationService
    +Notify()
}

' Конкретная реализация сервиса уведомлений через приложение
class ApplicationNotificftionService {
    +Notify()
}

' Декораторы для различных типов уведомлений
class EmailNotificationDecorator {
    +Notify()
}

class FaceBookNotificationDecorator {
    +Notify()
}

class SmsNotificationDecorator {
    +Notify()
}


' Класс для настройки уведомлений
class NotyficationOption {
    +SendFBNotification : bool
    +SendToMail : bool
    +SendToSms : bool
}

' Класс для выпуска карт
class MessageService {
    +Issue(message : Message)
}

' Класс для управления картами
class MessageManager {
    -MessageService : MessageService
    -notyficationOption : NotyficationOption
    +Issue()
}

' Класс сообщения
class Message {
    +Content : string
}

' Перечисление типов уведомлений
enum NotificationType {
    Facebook
    Sms
    Email
}

' Отношения наследования
BaseDecorator ..|> INotyficationService
ApplicationNotificftionService ..|> INotyficationService
EmailNotificationDecorator --|> BaseDecorator
FaceBookNotificationDecorator --|> BaseDecorator
SmsNotificationDecorator --|> BaseDecorator

' Отношения композиции
MessageManager o-- MessageService
MessageManager o-- NotyficationOption
MessageService o-- Message

' Отношения зависимости
MessageManager ..> INotyficationService
MessageManager ..> NotificationType
MessageManager ..> EmailNotificationDecorator
MessageManager ..> FaceBookNotificationDecorator
MessageManager ..> SmsNotificationDecorator
EmailNotificationDecorator ..> INotyficationService
FaceBookNotificationDecorator ..> INotyficationService
SmsNotificationDecorator ..> INotyficationService
BaseDecorator ..> INotyficationService

@enduml